<resources>
    <string name="app_name">MyCocktailsBar</string>

    <!--Cocktails screen-->
    <string name="add_button">add button</string>
    <string name="no_content_image">no content image</string>
    <string name="my_cocktails">My cocktails</string>
    <string name="add_your_first_cocktail">Add your first\n cocktail here</string>
    <string name="arrow_down">arrow_down</string>
    <string name="default_text">Some default text</string>
    <string name="cocktail_image">cocktail image</string>
    <string name="error_image">error image</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="add_title">Add title</string>
    <string name="add_ingredients">Add ingredients</string>

    <!--Creating screen-->
    <string name="add_picture">Add picture</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="recipe">Recipe</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ingredients">Ingredients</string>

    <!--Details screen-->
    <string name="edit">Edit</string>
    <string name="recipe_string">Recipe:\n %1$s </string>
    <string name="delete">Delete</string>
    <string name="alert_dialog_title">Attention</string>
    <string name="alert_dialog_message_delete">Are you sure you want to delete this cocktail?</string>
    <string name="answer_yes">YES</string>
    <string name="answer_no">NO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>