<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.details.DetailsFragment">


    <ImageView
        android:id="@+id/cocktail_image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/blue"
        android:contentDescription="@string/cocktail_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/cocktail_info_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/details_screen_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/cocktail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="52dp"
                android:layout_marginTop="28dp"
                android:ellipsize="end"
                android:fontFamily="@font/didact_gothic"
                android:gravity="center"
                android:lines="1"
                android:text="@string/default_text"
                android:textAlignment="center"
                android:textSize="@dimen/title_text_size" />

            <TextView
                android:id="@+id/cocktail_description"
                style="@style/DetailsBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cocktail_ingredients"
                style="@style/DetailsBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/cocktail_recipe"
                style="@style/DetailsBodyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/button_edit"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="match_parent"
        android:layout_height="@dimen/long_buttons_height"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/small_button_shape"
        android:contentDescription="@string/add_picture"
        android:fontFamily="@font/didact_gothic"
        android:gravity="center"
        android:text="@string/edit"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/button_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_delete"
        style="@style/SaveButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/long_buttons_height"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/add_picture"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/delete"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>