<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.creation.CreationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:layout_width="216dp"
            android:layout_height="204dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/big_button_shape"
            android:contentDescription="@string/add_picture"
            android:src="@drawable/ic_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cocktail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="40dp"
            android:hint="@string/title"
            android:textColorHint="@color/dark_grey"
            app:boxCornerRadiusBottomEnd="56dp"
            app:boxCornerRadiusBottomStart="56dp"
            app:boxCornerRadiusTopEnd="56dp"
            app:boxCornerRadiusTopStart="56dp"
            app:boxStrokeColor="@color/grey"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_delete_x"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Add title"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/dark_grey"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_cocktail_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cocktail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/description"
            android:textColorHint="@color/dark_grey"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:boxStrokeColor="@color/grey"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_delete_x"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Optional field"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/dark_grey"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_cocktail_description"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cocktail_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/ingredients"
            android:textColorHint="@color/dark_grey"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:boxStrokeColor="@color/grey"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_delete_x"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Optional field"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/dark_grey"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_cocktail_ingredients"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_cocktail_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:hint="@string/recipe"
            android:textColorHint="@color/dark_grey"
            app:boxCornerRadiusBottomEnd="34dp"
            app:boxCornerRadiusBottomStart="34dp"
            app:boxCornerRadiusTopEnd="34dp"
            app:boxCornerRadiusTopStart="34dp"
            app:boxStrokeColor="@color/grey"
            app:endIconCheckable="true"
            app:endIconDrawable="@drawable/ic_delete_x"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="Optional field"
            app:helperTextEnabled="true"
            app:helperTextTextColor="@color/dark_grey"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextColor="@color/dark_grey">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_cocktail_recipe"
                android:layout_width="match_parent"
                android:layout_height="154dp"
                android:gravity="top"
                android:inputType="text"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="@dimen/long_buttons_height"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/small_button_shape"
            android:contentDescription="@string/add_picture"
            android:fontFamily="@font/didact_gothic"
            android:gravity="center"
            android:text="@string/save"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/long_buttons_height"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/add_picture"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/cancel"
            android:textSize="24sp" />

    </LinearLayout>


</ScrollView>